package com.padroes.iterator;

public interface Agregado<T> {
    Iterador<T> criarIterador();
}
